--- a/src/app/activos/activos.component.html
+++ b/src/app/activos/activos.component.html
@@ -44,7 +44,7 @@
                     (click)="finalizar(ser.idServicio)"
                     > 
                   <span>
-                    <i class="fa-solid fa-ban"></i>
+                    <i class="fa-solid fa-check"></i>
                     Finalizar
                   </span>
                 </button></td>
