--- a/src/app/reporte-cotizacion/reporte-cotizacion.component.css
+++ b/src/app/reporte-cotizacion/reporte-cotizacion.component.css
@@ -23,3 +23,12 @@
     color: whitesmoke;
     font-size: medium;   
 }
+.btnImprimir{
+    background-color: #57A6A1;
+    align-items: center;
+    border-radius: 10px;
+    padding: 10px;
+    
+    color: whitesmoke;
+    font-size: medium;   
+}
