--- a/src/app/servicios-form/servicios-form.component.html
+++ b/src/app/servicios-form/servicios-form.component.html
@@ -68,7 +68,7 @@
                 <div class="field">
                     <label class="label" for="tipo-input">Tipo de servicio</label>
                     <div class="control input-container">
-                        <select id="cat-input" class="input" [(ngModel)]="servicio.categoria">
+                        <select id="cat-input" class="input" [(ngModel)]="servicio.tipo">
                             <option value="" disabled selected>Selecciona una categoría</option>
                             <option value="Mantenimiento">Mantenimiento</option>
                             <option value="Instalacion">Instalación</option>
