--- a/src/app/cotizacion-registro/cotizacion-registro.component.html
+++ b/src/app/cotizacion-registro/cotizacion-registro.component.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 <link rel="stylesheet" href="/assets/css/formularios.css">
 <div id="main-content">
-<div class="contenedor"> 
+<div class="contenedor"#content> 
     <div class="mier" style="height: 100px;">
 
     </div>
-    <div class="encabezado ">
+    <div class="encabezado">
         <h1>Cotización</h1>
     </div>  
     <div class="cuerpo ">
@@ -148,7 +148,7 @@
             </div>
             <div class="field column">
                 <div class="">
-                    <button class="btnImprimir">
+                    <button class="btnImprimir" (click)="generatePDF()">
                         <span>
                             <i class="fa-solid fa-print"></i>
                             Imprimir
