--- a/src/app/cotizacion/cotizacion.component.html
+++ b/src/app/cotizacion/cotizacion.component.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 <link rel="stylesheet" href="/assets/css/formularios.css">
 <div id="main-content">
-<div class="contenedor"> 
+<div class="contenedor" #content> 
     <div class="encabezado ">
-        <h1>Detalles de la cotización</h1>
+        <h1>Cotización</h1>
     </div>  
     <div class="cuerpo ">
         <div class="columns">
@@ -116,7 +116,7 @@
             </div>
             <div class="field column">
                 <div>
-                    <button class="btnImprimir">
+                    <button class="btnImprimir" (click)="generatePDF()">
                         <span>
                             <i class="fa-solid fa-print"></i>
                             Imprimir
