--- a/src/app/reporte-servicio/reporte-servicio.component.html
+++ b/src/app/reporte-servicio/reporte-servicio.component.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/assets/css/formularios.css">
 
 
-<div id="main-content">
+<div id="main-content" #content>
     <div class="contenedor"> 
         <div class="encabezado ">
             <h1>Reporte de Ventas</h1>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="field column">
                     <div>
-                        <button class="btnImprimir">
+                        <button class="btnImprimir" (click)="generatePDF()">
                             <span>
                                 <i class="fa-solid fa-print"></i>
                                 Imprimir
